# trajektor

./: CMakeLists.txt  Makefile  README.md
include/: Body.h  Force.h  Movement.h  Position.h  SpaceObject.h  SpaceSystem.h
src/: Body.cpp  CMakeLists.txt  Force.cpp  Makefile  Movement.cpp  Position.cpp  SpaceObject.cpp  SpaceSystem.cpp
testcases/: 2dplot.gp  Makefile  montage.txt  run_basic_obj  showpath  test_basic_obj.cpp  test_unit.cpp
tests/: CMakeLists.txt  showpath  test_basic_obj.cpp  test_unit.cpp
